optimize the extract gamma

--- a/dl_models/pybeltest.ipynb
+++ b/dl_models/pybeltest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "formal-archives",
+   "id": "herbal-rubber",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "modified-barcelona",
+   "id": "returning-client",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ordered-cowboy",
+   "id": "owned-creation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "trying-xerox",
+   "id": "intelligent-cycle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "common-imagination",
+   "id": "mental-constitution",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "convinced-graduation",
+   "id": "treated-recipient",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "recreational-raising",
+   "id": "provincial-affiliate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "relevant-kitty",
+   "id": "danish-manufacturer",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "liked-principal",
+   "id": "recorded-audio",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "synthetic-gospel",
+   "id": "female-remark",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "handled-skating",
+   "id": "returning-script",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "applied-infrared",
+   "id": "peaceful-edition",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "twelve-darwin",
+   "id": "animal-librarian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "devoted-gazette",
+   "id": "respected-longitude",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "searching-journal",
+   "id": "insured-julian",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -218,8 +218,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "intermediate-portland",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import this"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "logical-break",
+   "id": "comic-swedish",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -227,15 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "applicable-still",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "proved-rochester",
+   "id": "employed-cleaner",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -243,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "english-temple",
+   "id": "recovered-clause",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "alternate-stream",
+   "id": "alleged-cologne",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "brilliant-physics",
+   "id": "configured-contest",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "combined-situation",
+   "id": "natural-kuwait",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "continued-qatar",
+   "id": "hawaiian-religious",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "critical-better",
+   "id": "unusual-database",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "coordinated-postage",
+   "id": "exact-aluminum",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "offensive-certification",
+   "id": "qualified-egypt",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "military-awareness",
+   "id": "periodic-catholic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "continued-lighting",
+   "id": "robust-medicine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "returning-consolidation",
+   "id": "mediterranean-marijuana",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "suited-certificate",
+   "id": "forbidden-keeping",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "supported-middle",
+   "id": "executed-evans",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "married-specialist",
+   "id": "searching-recording",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "humanitarian-secondary",
+   "id": "received-twenty",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "strategic-worth",
+   "id": "portuguese-arrow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "black-september",
+   "id": "altered-ocean",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mexican-milan",
+   "id": "earned-voltage",
    "metadata": {},
    "outputs": [],
    "source": []
